# realtime-filter-pipeline

./: LICENSE  README.md
realtime-filter-pipeline/: pyproject.toml
realtime-filter-pipeline/src/realtime_filter_pipeline/core/: __init__.py  aggregations.py  base.py
realtime-filter-pipeline/src/realtime_filter_pipeline/derivatives/: __init__.py  derivative.py
realtime-filter-pipeline/src/realtime_filter_pipeline/examples/: __init__.py  playground.py  playground_support.py
realtime-filter-pipeline/src/realtime_filter_pipeline/pipeline/: pipeline.py
realtime-filter-pipeline/src/realtime_filter_pipeline/smoothing/: __init__.py  average.py  ema.py  gaussian.py  median.py  savitzky_golay.py
realtime-filter-pipeline/tests/: test_base.py  test_playground_support.py  test_smoothing_filters.py
src/realtime_filter_pipeline/: __init__.py
src/realtime_filter_pipeline/pipeline/: __init__.py
src/realtime_filter_pipeline/smoothing/: low_pass.py  mode.py
tests/: test_derivative_filter.py  test_pipeline.py
